# beagle-1

./: AUTHORS  Beagle.sln  COPYING  ChangeLog  HACKING  Makefile.am  NEWS  README  beagle-lucene-2_0_004.userprefs  beagle-tbird-soc07.mdp  beagle-tbird-soc07.mds  beagle-tbird-soc07.userprefs  configure.in  gnome-autogen.sh
BeagleClient/: AssemblyInfo.cs  Client.cs  DaemonStatus.cs  Hit.cs  IQuery.cs  IQueryManager.cs  IStatusManager.cs  Indexable.cs  MDnsBrowser.cs  Makefile.am  Message.cs  Property.cs  Query.cs  QueryDomain.cs  QueryManager.cs  QueryableStatus.cs  RemoteControl.cs  SearchTerms.cs  StatusManager.cs
Filters/: FilterArchive.cs  FilterAudio.cs  FilterDOC.cs  FilterDocbook.cs  FilterHtml.cs  FilterImage.cs  FilterJpeg.cs  FilterKonqHistory.cs  FilterMail.cs  FilterOpenOffice.cs  FilterPdf.cs  FilterRTF.cs  FilterText.cs
Filters/HtmlAgilityPack/: HtmlDocument.cs
Filters/entagged-sharp/: EntaggedTest.cs
RDFAdapter/: BeagleSource.cs  SemWebClient.cs
Util/: Bim.cs  BitConverter.cs  Conf.cs  Config.cs  DateTimeUtil.cs  ExifData.cs  ICalParser.cs  ImBuddy.cs  IptcFile.cs  JpegHeader.cs  MDNSBrowser.cs  MDNSService.cs  MDnsService.cs  Makefile.am  MetadataStore.cs  Mork.cs  Password.cs  PathFinder.cs  PixbufUtils.cs  Stopwatch.cs  StringFu.cs  SystemInformation.cs  Tiff.cs  XmpFile.cs
Util/FSpot/: IptcFile.cs  JpegHeader.cs  Tiff.cs
Util/Modules/: ModuleAttribute.cs  ModuleLoader.cs  ModuleTypeLoader.cs
Util/SemWeb/: Store.cs
Util/Thunderbird/: AccountManager.cs  IManager.cs  ProfileManager.cs  PropertyStore.cs
Util/Trackers/: CollectorTracker.cs  DefaultTracker.cs  FileTracker.cs  FileTrackerEventArgs.cs  InotifyTracker.cs
beagle/: configure.in
beagle/Util/: ExternalStringsHack.cs.in  Makefile.am
beagle/Util/Snowball/: Makefile.am
beagle/Util/Snowball/algorithms/: README  langcode_mapping
beagle/Util/Snowball/compiler/: driver.c  generator_csharp.c  header.h
beagle/Util/Snowball/csharp/: Among.cs  SnowballProgram.cs
beagle/Util/TextCat/: Fingerprint.cs  GenerateFingerprint.cs  TextCategorizer.cs
beagle/Util/TextCat/sample_texts/: ar.txt  be.txt  cy.txt  da.txt  fa.txt  fi.txt  gv.txt  hi.txt  hr.txt  hy.txt  ja.txt  ka.txt  ko.txt  lt.txt  lv.txt  mr.txt  pl.txt  pt.txt  ru.txt  th.txt  tr.txt  uk.txt  vi.txt  zh.txt
beagle/beagled/: LuceneCommon.cs  PropertyKeywordFu.cs  QueryStringParser.cs
beagle/po/: LINGUAS  da.po  eo.po  es.po  ja.po  lv.po  vi.po
beagle/tools/: GetLanguage.cs  Makefile.am
beagled/: AssemblyInfo.cs  BackendBase.cs  BackendDriver.cs  BackendFlavor.cs  BeagleDaemon.cs  BuildIndex.cs  BuildRemovableIndex.cs  DBusServer.cs  DumpIndex.cs  EvolutionBackendsAssemblyInfo.cs  ExternalMetadataQueryable.cs  ExtractContent.cs  FileAttributesStore_Sqlite.cs  Filter.cs  FilterFactory.cs  GoogleDriver.cs  IBackend.cs  IIndexer.cs  IMetadata.cs  IQueryResult.cs  IQueryable.cs  InformationalMessagesRequestExecutor.cs  LuceneBitArray.cs  LuceneCommon.cs  LuceneContainer.cs  LuceneFileQueryable.cs  LuceneIndexingDriver.cs  LuceneQueryable.cs  LuceneQueryingDriver.cs  Makefile.am  ManageIndex.cs  NoiseFilter.cs  QueryDriver.cs  QueryExecutor.cs  Queryable.cs  RemoteControlExecutors.cs  RemoteIndexer.cs  RemoteIndexerRequest.cs  RemoteIndexerResponse.cs  RenamingLuceneDriver.cs  (+9 more)
beagled/AkregatorQueryable/: AkregatorQueryable.cs
beagled/BansheeQueryable/: BansheeIndexableGenerator.cs  BansheeIndexer.cs  BansheeQueryable.cs  BansheeQueryable.csproj  BansheeQueryable.sln
beagled/BlamQueryable/: BlamQueryable.cs
beagled/EvolutionDataServerQueryable/: CalContainer.cs  EvolutionDataServerQueryable.cs
data/: Makefile.am
po/: ChangeLog  ca.po  de.po  es.po  fr.po  it.po  ja.po  nb.po  pt_BR.po  ru.po  sv.po  zh_TW.po
search/: Search.cs
search/Tiles/: Image.cs  (+3 more)
src/: Makefile.am
src/Beagle/: AssemblyInfo.cs.in  Beagle.csproj  Makefile.am
src/Beagle.Daemon/: AssemblyInfo.cs.in  Beagle.Daemon.csproj  Makefile.am
src/Beagle.Daemon/Beagle.Daemon/: BeagleDaemon.cs  RemoteIndexer.cs
src/Beagle.Engine/: AssemblyInfo.cs.in  Beagle.Engine.csproj  Makefile.am
src/Beagle.Engine/Beagle.Engine/: BatteryMonitor.cs  ExternalMetadataQueryable.cs  FileAttributes.cs  FileAttributesStore.cs  FileAttributesStore_ExtendedAttribute.cs  FileAttributesStore_Mixed.cs  FileAttributesStore_Sqlite.cs  FilterFactory.cs  IFileAttributesStore.cs  IIndexer.cs  IQueryResult.cs  IQueryWorker.cs  IQueryable.cs  IndexSynchronization.cs  IndexerReceipts.cs  IndexerRequest.cs  InformationalMessagesRequestExecutor.cs  LuceneBitArray.cs  LuceneCommon.cs  LuceneFileQueryable.cs  LuceneIndexingDriver.cs  LuceneQueryable.cs  LuceneQueryingDriver.cs  NoiseFilter.cs  PropertyKeywordFu.cs  QueryDriver.cs  QueryExecutor.cs  QueryResult.cs  QueryStringParser.cs  Queryable.cs  QueryableFlavor.cs  RemoteControlExecutors.cs  RemoteIndexer.cs  RemoteIndexerRequest.cs  RemoteIndexerResponse.cs  Server.cs  Shutdown.cs  SnippetExecutor.cs  SnippetFu.cs  SqliteUtils.cs  (+4 more)
src/Beagle.Filters/: AssemblyInfo.cs.in  Beagle.Filters.csproj  Makefile.am
src/Beagle.Filters/Beagle.Filters/: Filter.cs  FilterAbiword.cs  FilterArchive.cs  FilterAudio.cs  FilterEmpathyLog.cs  FilterExternal.cs  FilterFactory.cs  FilterFlavor.cs  FilterGif.cs  FilterHtml.cs  FilterImage.cs  FilterKCal.cs  FilterKopeteLog.cs  FilterLabyrinth.cs  FilterM3U.cs  FilterMPlayerVideo.cs  FilterMail.cs  FilterMan.cs  FilterOpenOffice.cs  FilterPackage.cs  FilterPdf.cs  FilterPidginLog.cs  FilterPls.cs  FilterRTF.cs  FilterScribus.cs  FilterSource.cs  FilterSvg.cs  FilterTeX.cs  FilterTexi.cs  FilterText.cs  FilterTotem.cs  FilterVideo.cs
src/Beagle.Util/: AssemblyInfo.cs.in  Beagle.Util.csproj  Makefile.am
src/Beagle.Util/Beagle.Util/: Archive.cs  ExceptionHandlingThread.cs  NautilusTools.cs  PathFinder.cs  SafeProcess.cs  StringFu.cs  XdgMime.cs
src/Beagle/Beagle/: IIndexableGenerator.cs  Message.cs  TcpTransport.cs
tests/: README
thunderbird-extension/: Makefile.am  chrome.manifest  install.rdf
tools/: Config.cs  Info.cs  Query.cs  RdfQueryTool.cs  Settings.cs  rdf.cs  settings.glade
(+180 files in other folders)
