CSC = $(MCS) -debug

ASSEMBLY_NAME = Beagle.Engine
ASSEMBLY = $(ASSEMBLY_NAME).dll

ASSEMBLY_SOURCES = \
	AssemblyInfo.cs \
	Beagle.Engine/BatteryMonitor.cs \
	Beagle.Engine/ExternalMetadataQueryable.cs \
	Beagle.Engine/FileAttributes.cs \
	Beagle.Engine/FileAttributesStore.cs \
	Beagle.Engine/FileAttributesStore_ExtendedAttribute.cs \
	Beagle.Engine/FileAttributesStore_Mixed.cs \
	Beagle.Engine/FileAttributesStore_Sqlite.cs \
	Beagle.Engine/FilterFactory.cs \
	Beagle.Engine/IFileAttributesStore.cs \
	Beagle.Engine/IIndexer.cs \
	Beagle.Engine/IQueryResult.cs \
	Beagle.Engine/IQueryWorker.cs \
	Beagle.Engine/IQueryable.cs \
	Beagle.Engine/IndexSynchronization.cs \
	Beagle.Engine/IndexerReceipts.cs \
	Beagle.Engine/IndexerRequest.cs	\
	Beagle.Engine/InformationalMessagesRequestExecutor.cs \
	Beagle.Engine/LuceneBitArray.cs	\
	Beagle.Engine/LuceneCommon.cs \
	Beagle.Engine/LuceneFileQueryable.cs \
	Beagle.Engine/LuceneIndexingDriver.cs \
	Beagle.Engine/LuceneQueryable.cs \
	Beagle.Engine/LuceneQueryingDriver.cs \
	Beagle.Engine/NoiseFilter.cs \
	Beagle.Engine/PropertyKeywordFu.cs \
	Beagle.Engine/QueryDriver.cs \
	Beagle.Engine/QueryExecutor.cs \
	Beagle.Engine/QueryResult.cs \
	Beagle.Engine/QueryStringParser.cs \
	Beagle.Engine/Queryable.cs \
	Beagle.Engine/QueryableFlavor.cs \
	Beagle.Engine/RemoteControlExecutors.cs \
	Beagle.Engine/RemoteIndexerRequest.cs \
	Beagle.Engine/RemoteIndexerResponse.cs \
	Beagle.Engine/Server.cs \
	Beagle.Engine/Shutdown.cs \
	Beagle.Engine/SnippetExecutor.cs \
	Beagle.Engine/SnippetFu.cs \
	Beagle.Engine/SqliteUtils.cs \
	Beagle.Engine/StaticQueryable.cs \
	Beagle.Engine/TextCache.cs \
	Beagle.Engine/WebServer.cs \
	Lucene.Net/Analysis/Analyzer.cs \
	Lucene.Net/Analysis/CharTokenizer.cs				\
	Lucene.Net/Analysis/ISOLatin1AccentFilter.cs			\
	Lucene.Net/Analysis/KeywordAnalyzer.cs			\
	Lucene.Net/Analysis/KeywordTokenizer.cs			\
	Lucene.Net/Analysis/LengthFilter.cs				\
	Lucene.Net/Analysis/LetterTokenizer.cs			\
	Lucene.Net/Analysis/LowerCaseFilter.cs			\
	Lucene.Net/Analysis/LowerCaseTokenizer.cs			\
	Lucene.Net/Analysis/PerFieldAnalyzerWrapper.cs		\
	Lucene.Net/Analysis/PorterStemFilter.cs			\
	Lucene.Net/Analysis/PorterStemmer.cs				\
	Lucene.Net/Analysis/SimpleAnalyzer.cs				\
	Lucene.Net/Analysis/Standard/CharStream.cs			\
	Lucene.Net/Analysis/Standard/FastCharStream.cs		\
	Lucene.Net/Analysis/Standard/ParseException.cs		\
	Lucene.Net/Analysis/Standard/StandardAnalyzer.cs		\
	Lucene.Net/Analysis/Standard/StandardFilter.cs		\
	Lucene.Net/Analysis/Standard/StandardTokenizer.cs		\
	Lucene.Net/Analysis/Standard/StandardTokenizerConstants.cs	\
	Lucene.Net/Analysis/Standard/StandardTokenizerTokenManager.cs	\
	Lucene.Net/Analysis/Standard/Token.cs				\
	Lucene.Net/Analysis/Standard/TokenMgrError.cs			\
	Lucene.Net/Analysis/StopAnalyzer.cs				\
	Lucene.Net/Analysis/StopFilter.cs				\
	Lucene.Net/Analysis/Token.cs					\
	Lucene.Net/Analysis/TokenFilter.cs				\
	Lucene.Net/Analysis/TokenStream.cs				\
	Lucene.Net/Analysis/Tokenizer.cs				\
	Lucene.Net/Analysis/WhitespaceAnalyzer.cs			\
	Lucene.Net/Analysis/WhitespaceTokenizer.cs			\
	Lucene.Net/Analysis/WordlistLoader.cs				\
	Lucene.Net/Document/DateField.cs				\
	Lucene.Net/Document/DateTools.cs				\
	Lucene.Net/Document/Document.cs				\
	Lucene.Net/Document/Field.cs					\
	Lucene.Net/Document/NumberTools.cs				\
	Lucene.Net/Index/CompoundFileReader.cs			\
	Lucene.Net/Index/CompoundFileWriter.cs			\
	Lucene.Net/Index/DocumentWriter.cs				\
	Lucene.Net/Index/FieldInfo.cs					\
	Lucene.Net/Index/FieldInfos.cs				\
	Lucene.Net/Index/FieldsReader.cs				\
	Lucene.Net/Index/FieldsWriter.cs				\
	Lucene.Net/Index/FilterIndexReader.cs				\
	Lucene.Net/Index/IndexFileNameFilter.cs			\
	Lucene.Net/Index/IndexFileNames.cs				\
	Lucene.Net/Index/IndexModifier.cs				\
	Lucene.Net/Index/IndexReader.cs				\
	Lucene.Net/Index/IndexWriter.cs				\
	Lucene.Net/Index/MultiReader.cs				\
	Lucene.Net/Index/MultipleTermPositions.cs			\
	Lucene.Net/Index/ParallelReader.cs				\
	Lucene.Net/Index/SegmentInfo.cs				\
	Lucene.Net/Index/SegmentInfos.cs				\
	Lucene.Net/Index/SegmentMergeInfo.cs				\
	Lucene.Net/Index/SegmentMergeQueue.cs				\
	Lucene.Net/Index/SegmentMerger.cs				\
	Lucene.Net/Index/SegmentReader.cs				\
	Lucene.Net/Index/SegmentTermDocs.cs				\
	Lucene.Net/Index/SegmentTermEnum.cs				\
	Lucene.Net/Index/SegmentTermPositionVector.cs			\
	Lucene.Net/Index/SegmentTermPositions.cs			\
	Lucene.Net/Index/SegmentTermVector.cs				\
	Lucene.Net/Index/Term.cs					\
	Lucene.Net/Index/TermBuffer.cs				\
	Lucene.Net/Index/TermDocs.cs					\
	Lucene.Net/Index/TermEnum.cs					\
	Lucene.Net/Index/TermFreqVector.cs				\
	Lucene.Net/Index/TermInfo.cs					\
	Lucene.Net/Index/TermInfosReader.cs				\
	Lucene.Net/Index/TermInfosWriter.cs				\
	Lucene.Net/Index/TermPositionVector.cs			\
	Lucene.Net/Index/TermPositions.cs				\
	Lucene.Net/Index/TermVectorOffsetInfo.cs			\
	Lucene.Net/Index/TermVectorsReader.cs				\
	Lucene.Net/Index/TermVectorsWriter.cs				\
	Lucene.Net/LucenePackage.cs					\
	Lucene.Net/QueryParser/CharStream.cs				\
	Lucene.Net/QueryParser/FastCharStream.cs			\
	Lucene.Net/QueryParser/MultiFieldQueryParser.cs		\
	Lucene.Net/QueryParser/ParseException.cs			\
	Lucene.Net/QueryParser/QueryParser.cs				\
	Lucene.Net/QueryParser/QueryParserConstants.cs		\
	Lucene.Net/QueryParser/QueryParserTokenManager.cs		\
	Lucene.Net/QueryParser/Token.cs				\
	Lucene.Net/QueryParser/TokenMgrError.cs			\
	Lucene.Net/Search/BooleanClause.cs				\
	Lucene.Net/Search/BooleanQuery.cs				\
	Lucene.Net/Search/BooleanScorer.cs				\
	Lucene.Net/Search/BooleanScorer2.cs				\
	Lucene.Net/Search/CachingWrapperFilter.cs			\
	Lucene.Net/Search/ConjunctionScorer.cs			\
	Lucene.Net/Search/ConstantScoreQuery.cs			\
	Lucene.Net/Search/ConstantScoreRangeQuery.cs			\
	Lucene.Net/Search/DateFilter.cs				\
	Lucene.Net/Search/DefaultSimilarity.cs			\
	Lucene.Net/Search/DisjunctionMaxQuery.cs			\
	Lucene.Net/Search/DisjunctionMaxScorer.cs			\
	Lucene.Net/Search/DisjunctionSumScorer.cs			\
	Lucene.Net/Search/ExactPhraseScorer.cs			\
	Lucene.Net/Search/Explanation.cs				\
	Lucene.Net/Search/FieldCache.cs				\
	Lucene.Net/Search/FieldCacheImpl.cs				\
	Lucene.Net/Search/FieldDoc.cs					\
	Lucene.Net/Search/FieldDocSortedHitQueue.cs			\
	Lucene.Net/Search/FieldSortedHitQueue.cs			\
	Lucene.Net/Search/Filter.cs					\
	Lucene.Net/Search/FilteredQuery.cs				\
	Lucene.Net/Search/FilteredTermEnum.cs				\
	Lucene.Net/Search/FuzzyQuery.cs				\
	Lucene.Net/Search/FuzzyTermEnum.cs				\
	Lucene.Net/Search/Hit.cs					\
	Lucene.Net/Search/HitCollector.cs				\
	Lucene.Net/Search/HitIterator.cs				\
	Lucene.Net/Search/HitQueue.cs					\
	Lucene.Net/Search/Hits.cs					\
	Lucene.Net/Search/IndexSearcher.cs				\
	Lucene.Net/Search/MatchAllDocsQuery.cs			\
	Lucene.Net/Search/MultiPhraseQuery.cs				\
	Lucene.Net/Search/MultiSearcher.cs				\
	Lucene.Net/Search/MultiTermQuery.cs				\
	Lucene.Net/Search/NonMatchingScorer.cs			\
	Lucene.Net/Search/ParallelMultiSearcher.cs			\
	Lucene.Net/Search/PhrasePositions.cs				\
	Lucene.Net/Search/PhrasePrefixQuery.cs			\
	Lucene.Net/Search/PhraseQuery.cs				\
	Lucene.Net/Search/PhraseQueue.cs				\
	Lucene.Net/Search/PhraseScorer.cs				\
	Lucene.Net/Search/PrefixQuery.cs				\
	Lucene.Net/Search/Query.cs					\
	Lucene.Net/Search/QueryFilter.cs				\
	Lucene.Net/Search/QueryTermVector.cs				\
	Lucene.Net/Search/RangeFilter.cs				\
	Lucene.Net/Search/RangeQuery.cs				\
	Lucene.Net/Search/Regex/RegexQuery.cs				\
	Lucene.Net/Search/Regex/RegexTermEnum.cs			\
	Lucene.Net/Search/Regex/SpanRegexQuery.cs			\
	Lucene.Net/Search/ReqExclScorer.cs				\
	Lucene.Net/Search/ReqOptSumScorer.cs				\
	Lucene.Net/Search/ScoreDoc.cs					\
	Lucene.Net/Search/ScoreDocComparator.cs			\
	Lucene.Net/Search/Scorer.cs					\
	Lucene.Net/Search/Searchable.cs				\
	Lucene.Net/Search/Searcher.cs					\
	Lucene.Net/Search/Similarity.cs				\
	Lucene.Net/Search/SimilarityDelegator.cs			\
	Lucene.Net/Search/SloppyPhraseScorer.cs			\
	Lucene.Net/Search/Sort.cs					\
	Lucene.Net/Search/SortComparator.cs				\
	Lucene.Net/Search/SortComparatorSource.cs			\
	Lucene.Net/Search/SortField.cs				\
	Lucene.Net/Search/Spans/NearSpans.cs				\
	Lucene.Net/Search/Spans/SpanFirstQuery.cs			\
	Lucene.Net/Search/Spans/SpanNearQuery.cs			\
	Lucene.Net/Search/Spans/SpanNotQuery.cs			\
	Lucene.Net/Search/Spans/SpanOrQuery.cs			\
	Lucene.Net/Search/Spans/SpanQuery.cs				\
	Lucene.Net/Search/Spans/SpanScorer.cs				\
	Lucene.Net/Search/Spans/SpanTermQuery.cs			\
	Lucene.Net/Search/Spans/SpanWeight.cs				\
	Lucene.Net/Search/Spans/Spans.cs				\
	Lucene.Net/Search/TermQuery.cs				\
	Lucene.Net/Search/TermScorer.cs				\
	Lucene.Net/Search/TopDocs.cs					\
	Lucene.Net/Search/TopFieldDocs.cs				\
	Lucene.Net/Search/Weight.cs					\
	Lucene.Net/Search/WildcardQuery.cs				\
	Lucene.Net/Search/WildcardTermEnum.cs				\
	Lucene.Net/SharpZipLibAdapter.cs				\
	Lucene.Net/Store/BufferedIndexInput.cs			\
	Lucene.Net/Store/BufferedIndexOutput.cs			\
	Lucene.Net/Store/Directory.cs					\
	Lucene.Net/Store/FSDirectory.cs				\
	Lucene.Net/Store/IndexInput.cs				\
	Lucene.Net/Store/IndexOutput.cs				\
	Lucene.Net/Store/InputStream.cs				\
	Lucene.Net/Store/Lock.cs					\
	Lucene.Net/Store/MMapDirectory.cs				\
	Lucene.Net/Store/OutputStream.cs				\
	Lucene.Net/Store/RAMDirectory.cs				\
	Lucene.Net/Store/RAMFile.cs					\
	Lucene.Net/Store/RAMInputStream.cs				\
	Lucene.Net/Store/RAMOutputStream.cs				\
	Lucene.Net/SupportClass.cs \
	Lucene.Net/Util/BitVector.cs					\
	Lucene.Net/Util/Constants.cs					\
	Lucene.Net/Util/Parameter.cs					\
	Lucene.Net/Util/PriorityQueue.cs				\
	Lucene.Net/Util/SmallFloat.cs					\
	Lucene.Net/Util/StringHelper.cs				\
	Lucene.Net/Util/ToStringUtils.cs				\
	Snowball.Net/Lucene.Net/Analysis/Snowball/SnowballAnalyzer.cs	\
	Snowball.Net/Lucene.Net/Analysis/Snowball/SnowballFilter.cs	\
	Snowball.Net/SF/Snowball/Among.cs				\
	Snowball.Net/SF/Snowball/Ext/DanishStemmer.cs			\
	Snowball.Net/SF/Snowball/Ext/DutchStemmer.cs			\
	Snowball.Net/SF/Snowball/Ext/EnglishStemmer.cs		\
	Snowball.Net/SF/Snowball/Ext/FinnishStemmer.cs		\
	Snowball.Net/SF/Snowball/Ext/FrenchStemmer.cs			\
	Snowball.Net/SF/Snowball/Ext/German2Stemmer.cs		\
	Snowball.Net/SF/Snowball/Ext/GermanStemmer.cs			\
	Snowball.Net/SF/Snowball/Ext/ItalianStemmer.cs		\
	Snowball.Net/SF/Snowball/Ext/KpStemmer.cs			\
	Snowball.Net/SF/Snowball/Ext/LovinsStemmer.cs			\
	Snowball.Net/SF/Snowball/Ext/NorwegianStemmer.cs		\
	Snowball.Net/SF/Snowball/Ext/PorterStemmer.cs			\
	Snowball.Net/SF/Snowball/Ext/PortugueseStemmer.cs		\
	Snowball.Net/SF/Snowball/Ext/RussianStemmer.cs		\
	Snowball.Net/SF/Snowball/Ext/SpanishStemmer.cs		\
	Snowball.Net/SF/Snowball/Ext/SwedishStemmer.cs		\
	Snowball.Net/SF/Snowball/SnowballProgram.cs \

ASSEMBLY_REFERENCES = \
	-r:../Beagle.Util/Beagle.Util.dll \
	$(BEAGLED_LIBS) \
	$(SHARPZIPLIBS_LIBS) \
	-r:Mono.Posix

$(ASSEMBLY): $(ASSEMBLY_SOURCES)
	$(CSC) -out:$@ -target:library $(ASSEMBLY_SOURCES) $(ASSEMBLY_REFERENCES)

all: $(ASSEMBLY)

install-data-local: $(ASSEMBLY)
	$(mkinstalldirs) $(DESTDIR)$(pkglibdir)
	$(INSTALL_DATA) $(ASSEMBLY) $(ASSEMBLY).mdb $(DESTDIR)$(pkglibdir)

uninstall-local:
	rm -f $(DESTDIR)$(pkglibdir)/$(ASSEMBLY) $(DESTDIR)$(pkglibdir)/$(ASSEMBLY).mdb

EXTRA_DIST = \
	$(ASSEMBLY_SOURCES)

CLEANFILES = \
	$(ASSEMBLY) \
	$(ASSEMBLY).mdb
