## Process this file with automake to produce Makefile.in
	
bin_PROGRAMS = \
	snowball

snowball_SOURCES = \
	./compiler/analyser.c \
	./compiler/driver.c \
	./compiler/generator.c \
	./compiler/generator_csharp.c \
	./compiler/generator_java.c \
	./compiler/sort.c \
	./compiler/space.c \
	./compiler/tokeniser.c 

noinst_HEADERS = \
	./compiler/header.h

EXTRA_DIST = \
	./algorithms/danish/stem_ISO_8859_1.sbl \
	./algorithms/danish/stem_MS_DOS_Latin_I.sbl \
	./algorithms/danish/stem_Unicode.sbl \
	./algorithms/dutch/stem_ISO_8859_1.sbl \
	./algorithms/dutch/stem_MS_DOS_Latin_I.sbl \
	./algorithms/dutch/stem_Unicode.sbl \
	./algorithms/english/stem_ISO_8859_1.sbl \
	./algorithms/english/stem_Unicode.sbl \
	./algorithms/finnish/stem_ISO_8859_1.sbl \
	./algorithms/finnish/stem_Unicode.sbl \
	./algorithms/french/stem_ISO_8859_1.sbl \
	./algorithms/french/stem_MS_DOS_Latin_I.sbl \
	./algorithms/french/stem_Unicode.sbl \
	./algorithms/german2/stem_ISO_8859_1.sbl \
	./algorithms/german/stem_ISO_8859_1.sbl \
	./algorithms/german/stem_MS_DOS_Latin_I.sbl \
	./algorithms/german/stem_Unicode.sbl \
	./algorithms/hungarian/stem_ISO_8859_1.sbl \
	./algorithms/hungarian/stem_Unicode.sbl \
	./algorithms/kraaij_pohlmann/stem_ISO_8859_1.sbl \
	./algorithms/lovins/stem_ISO_8859_1.sbl \
	./algorithms/norwegian/stem_ISO_8859_1.sbl \
	./algorithms/norwegian/stem_MS_DOS_Latin_I.sbl \
	./algorithms/norwegian/stem_Unicode.sbl \
	./algorithms/porter/stem_ISO_8859_1.sbl \
	./algorithms/porter/stem_Unicode.sbl \
	./algorithms/portuguese/stem_ISO_8859_1.sbl \
	./algorithms/portuguese/stem_MS_DOS_Latin_I.sbl \
	./algorithms/portuguese/stem_Unicode.sbl \
	./algorithms/romanian1/stem_Unicode.sbl \
	./algorithms/romanian2/stem_Unicode.sbl \
	./algorithms/russian/stem_KOI8_R.sbl \
	./algorithms/russian/stem_Unicode.sbl \
	./algorithms/spanish/stem_ISO_8859_1.sbl \
	./algorithms/spanish/stem_MS_DOS_Latin_I.sbl \
	./algorithms/spanish/stem_Unicode.sbl \
	./algorithms/swedish/stem_ISO_8859_1.sbl \
	./algorithms/swedish/stem_MS_DOS_Latin_I.sbl \
	./algorithms/swedish/stem_Unicode.sbl 
